# NDKTest

./: .gitignore  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/apple/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-math.cpp
app/src/main/java/com/example/apple/opencvtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/apple/opencvtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
heif/: .gitignore  CMakeLists.txt  build.gradle
heif/Srcs/writer/: entitygroupwriter.cpp  metadatawriter.cpp  metapropertywriter.cpp  trackthumbswriter.cpp
heif/Srcs/writerapp/: writercfg.cpp
heif/src/androidTest/java/com/example/heif/: ExampleInstrumentedTest.java
heif/src/main/: AndroidManifest.xml
heif/src/main/cpp/Srcs/: CMakeLists.txt
heif/src/main/cpp/Srcs/common/: CMakeLists.txt  androidhacks.hpp
heif/src/main/cpp/Srcs/examples/: CMakeLists.txt  native-math.cpp
heif/src/main/cpp/Srcs/parser/: CMakeLists.txt
heif/src/main/cpp/Srcs/parser/avcparser/: CMakeLists.txt
heif/src/main/cpp/Srcs/parser/h265parser/: CMakeLists.txt
heif/src/main/cpp/Srcs/reader/: CMakeLists.txt
heif/src/main/cpp/Srcs/writer/: CMakeLists.txt  auxiliaryimagewriter.cpp  imagethumbswriter.cpp  metaderivedimagewriter.cpp  primaryitemwriter.cpp
heif/src/main/cpp/Srcs/writerapp/: CMakeLists.txt
heif/src/main/java/com/example/heif/: HEIFUtils.java
heif/src/main/res/values/: strings.xml
heif/src/test/java/com/example/heif/: ExampleUnitTest.java
mathlib/: CMakeLists.txt  build.gradle
mathlib/src/androidTest/java/com/example/mathlib/: ExampleInstrumentedTest.java
mathlib/src/main/: AndroidManifest.xml
mathlib/src/main/cpp/: add.cpp  add.h
mathlib/src/main/res/values/: strings.xml
mathlib/src/test/java/com/example/mathlib/: ExampleUnitTest.java
